api/kubernetes/apimetrobus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-metro-bus-service
spec:
  type: ClusterIP
  ports:
    - port: 7001
  selector:
    app: api-metro-bus
