api/kubernetes/apimetrobus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-metro-bus-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: api-metro-bus-service
                port:
                  number: 7001
            path: /
            pathType: Prefix
